...
    <string name="registration_information">Registration Information</string>
    <string name="waiting_list_information">Waiting List Information</string>
    <string name="event_information">Event Information</string>
    <string name="confirm_and_notify_button_text">Confirm and Notify</string>
    <string name="cancel_button">Cancel</string>
    <string name="user_profile_page">Profile</string>
    <string name="name_field">Name</string>
    <string name="mock_name">John Doe</string>
    <string name="email_field">Email</string>
    <string name="mock_email">jdoe@gmail.com</string>
    <string name="number_field">Phone Number (optional)</string>
    <string name="mock_number">(XXX) XXX-XXXX</string>
    <string name="notification_field">Notification Preferences</string>
    <string name="notification_statement">I want to receive notifications from administrators and organizers</string>
    <string name="update_button">Update</string>
    <string name="reg_history_button">Registration History</string>
    <string name="delete_button">Delete Profile</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_for_event_info_page">Scan for event details</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
...
    <string name="invited">Invited</string>
    <string name="cancelled">Cancelled</string>
    <string name="view_entrants">View Entrants</string>
    <string name="view_entrant_map">View Entrant Map</string>
    <string name="run_draw">Run Draw</string>
    <string name="finalize">Finalize</string>
    <string name="join_waiting_list">Join Waiting List</string>
    <string name="leave_waiting_list">Leave Waiting List</string>

    <string name="info_cannot_join_closed">You can no longer join this event\'s waiting list.</string>
    <string name="error_missing_event_id">Missing event id</string>
    <string name="error_event_not_found">Event not found</string>

    <string name="success_joined_waiting_list">Successfully joined waiting list!</string>
    <string name="success_left_waiting_list">You have left the waiting list.</string>
    <string name="error_failed_to_load">Failed to load: %1$s</string>
    <string name="error_failed_to_join">Failed to join: %1$s</string>
    <string name="error_failed_to_leave">Failed to leave: %1$s</string>

    <string name="accept_invitation">Accept Invitation</string>
    <string name="decline_invitation">Decline Invitation</string>

    <string name="info_finalized_organizer">Organizer has finalized event attendance. Better luck next time!</string>
    <string name="info_accepted">You have accepted your invitation to this event. Enjoy!</string>
    <string name="info_declined">You have declined your invitation to this event.</string>
    <string name="info_invitation_cancelled">Your invitation has been cancelled.</string>
...
