...
                android:text="@string/notification_field"
                android:textColor="@color/primary_green"
                android:textSize="16sp"
                android:paddingTop="20dp" />

            <CheckBox
                android:id="@+id/notifications_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingTop="8dp"
                android:text="@string/notification_statement"
                android:textColor="@color/grey" />
...
                android:layout_marginTop="24dp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:radius="30dp" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary_green"
                android:radius="30dp"
...
